--- a/popup.html
+++ b/popup.html
@@ -2,10 +2,8 @@
 <html>
 <head>
   <title>Download Course Files</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.0/jszip.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
-  <script src="popup.js"></script>
-  <style>
+  <script src="jszip.min.js"></script>
+   <style>
     * {
       box-sizing: border-box;
     }
